--- a/css/custom.css
+++ b/css/custom.css
@@ -482,6 +482,9 @@ small, .t-s, .result__snippet, .result__extras, .nav-menu__item, .use-opts .opt-
   height: 18px;
   top: -1px;
 }
+.is-open .tile__expand:before {
+  content: "\5e";
+}
 .zci__body .chomp--link, .zci__more-at, .zci__more-at--info, .zci__body .chomp--link:focus, .zci__more-at:focus, .zci__more-at--info:focus {
   color: #888;
 }
